@@ -150,8 +150,8 @@ bool StelScriptMgr::preprocessStratoScript(QFile& input, QString& output, const 
 				line = QString("GridLinesMgr.setFlagMeridianLine(%1);").arg(strToBool(args.at(2)));
 			else if (args.at(1) == "horizon_line")
 				line = QString("GridLinesMgr.setFlagHorizonLine(%1);").arg(strToBool(args.at(2)));
-			else if (args.at(1) == "galactic_plane_line")
-				line = QString("GridLinesMgr.setFlagGalacticPlaneLine(%1);").arg(strToBool(args.at(2)));
+			else if ((args.at(1) == "galactic_equator_line") || (args.at(1) == "galactic_plane_line"))  // "plane" for legacy scripts before 0.13.1.
+				line = QString("GridLinesMgr.setFlagGalacticEquatorLine(%1);").arg(strToBool(args.at(2)));
 			else if (args.at(1) == "milky_way")
 				line = QString("MilkyWay.setFlagShow(%1);").arg(strToBool(args.at(2)));
 			else if (args.at(1) == "nebulae")
